<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:src="@drawable/bmi"
        android:scaleType="centerCrop"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/logo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/bmi"
        android:textColor="#86AF4C"
        android:id="@+id/bmiTitle"
        android:layout_marginTop="50dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"/>
    <TextView
        android:id="@+id/bmiUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/amarante"
        android:text="@string/unit"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amarante"
        android:text="@string/unit"
        android:id="@+id/spinner"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@id/bmiUnit"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="50dp"
        android:background="#808080"
        app:layout_constraintTop_toBottomOf="@id/bmiTitle"
        android:id="@+id/view1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#808080"
        app:layout_constraintTop_toBottomOf="@id/bmiUnit"
        android:id="@+id/view2"/>
    <TextView
        android:id="@+id/bmiWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/amarante"
        android:text="@string/bmi_weight"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />
    <TextView
        android:id="@+id/bmiWeightUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/amarante"
        android:text="@string/kg"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/bmiWeight" />
    <EditText
        android:id="@+id/bmiWeightLevel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:inputType="number"
        android:fontFamily="@font/amarante"
        android:hint="@string/enter_weight"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintEnd_toStartOf="@id/bmiWeightUnit"
        app:layout_constraintTop_toTopOf="@id/bmiWeight" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="#808080"
        app:layout_constraintTop_toBottomOf="@id/bmiWeight"
        android:id="@+id/view3"/>
    <TextView
        android:id="@+id/bmiHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/amarante"
        android:text="@string/bmi_height"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3" />
    <TextView
        android:id="@+id/bmiHeightUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/amarante"
        android:text="@string/m"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/bmiHeight" />
    <EditText
        android:id="@+id/bmiHeightLevel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:inputType="number"
        android:fontFamily="@font/amarante"
        android:hint="@string/enter_height"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintEnd_toStartOf="@id/bmiHeightUnit"
        app:layout_constraintTop_toTopOf="@id/bmiHeight" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="#808080"
        app:layout_constraintTop_toBottomOf="@id/bmiHeight"
        android:id="@+id/view4"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view4"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:id="@+id/bmiResult"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:text="@string/bmi_result"/>
</androidx.constraintlayout.widget.ConstraintLayout>